TODOメモを更新

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
-・終了時の確認ダイアログを表示しないようにも出来た方がいい　@ore
-	→確認ダイアログでShiftを押しながらはいを押すと次回以降表示されない仕様にする？
+・起動時に内部エラーが出ることがあるのを直す
+(SSBCCCF起動時に自身でCameloFilterを一瞬だけキャッチして初期化させる)
 
-・起動中にPJ側の終了を検出すると、SSBCCCFも終了する
-
+・PJ64のウィンドウに上乗せする形で使用する背景が透過されたウィンドウを表示できるモードを実装する
+(glN64での使用が前提)
