TODOメモを更新

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 ・起動時に内部エラーが出ることがあるのを直す
 (SSBCCCF起動時に自身でCameloFilterを一瞬だけキャッチして初期化させる)
 
-・PJ64のウィンドウに上乗せする形で使用する背景が透過されたウィンドウを表示できるモードを実装する
-(glN64での使用が前提)
+・起動時に前回のウィンドウ位置を復元する機能を追加(オプション実装)
+
+・起動時に最小化で起動する機能を追加(オプション実装)
